--- a/day5/演習3/pytest.ini
+++ b/day5/演習3/pytest.ini
@@ -1,3 +1,3 @@
 [pytest]
-addopts = --json-report --json-report-file=report.json
-testpaths = tests # pytest.ini がある場所からの相対パス
+adopts = --json-report --json-report-file=report.json
+test paths = tests
